# novomatic_tasks

./: README.md
task1/: CMakeLists.txt  task1.cpp
task2/: .gitignore  CMakeLists.txt  task2.cpp
task2/include/: window.h
task2/src/: window.cpp
task3/: CMakeLists.txt  task3.cpp
